convert selection to ARGB32 format so that transparency mask works

according Qt doc, image format must be set to Format_ARGB32Premultiplied
or Format_ARGB32 for the composition modes to have any effect.
This is needed for the transparency mask to work here.

BUG: 300168
FIXED-IN: 4.13.1